// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders <button> as expected should render 1`] = `
<DocumentFragment>
  <button
    class="bx--btn bx--btn--primary"
    tabindex="0"
    type="button"
  >
    Test Label
  </button>
</DocumentFragment>
`;

exports[`Button Renders common props as expected renders children as expected 1`] = `
<DocumentFragment>
  <button
    class="extra-class bx--btn bx--btn--primary"
    tabindex="2"
    type="button"
  >
    <div
      class="child"
    >
      child
    </div>
    <div
      class="child"
    >
      child
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render 1`] = `
<DocumentFragment>
  <button
    class="extra-class bx--btn bx--btn--primary"
    tabindex="2"
    type="button"
  >
    <div
      class="child"
    >
      child
    </div>
    <div
      class="child"
    >
      child
    </div>
  </button>
</DocumentFragment>
`;
